modifiche notebook LSMT

--- a/Progetto/LSMT/LSMT.ipynb
+++ b/Progetto/LSMT/LSMT.ipynb
@@ -100,18 +100,14 @@
    "metadata": {},
    "source": [
     "### Pre-screening delle Traiettorie di Training e Valutazione del Timestep (Window Size)\n",
-    "Questo blocco di codice svolge una funzione di analisi preliminare critica dei dati di training. Il suo scopo principale è determinare l'usabilità delle traiettorie in funzione della dimensione della finestra temporale (Window Size o Timestep), un iperparametro cruciale per il modello LSTM.\n",
+    "Questo blocco di codice svolge una funzione di analisi preliminare critica dei dati di training. Il suo scopo principale è determinare l'usabilità delle traiettorie in funzione della dimensione della finestra temporale (Window Size o Timestep), un iperparametro cruciale per il modello LSTM.  \n",
+    "\n",
     "Il codice segue tre fasi distinte:\n",
-    "1. **Caricamento e Preparazione dei File di Training**:\n",
-    "   il codice individua tutti i file di dati che contengono le traiettorie delle navi (i file Parquet) e ne seleziona un sottoinsieme specifico da utilizzare per il training. Quindi, definisce una lista di diverse lunghezze di finestra che vogliamo testare (ad esempio, se usiamo gli ultimi 30 punti per la previsione o gli ultimi 40).\n",
+    "1. **Caricamento e Preparazione dei File di Training**: il codice individua tutti i file di dati che contengono le traiettorie delle navi e ne seleziona un sottoinsieme specifico da utilizzare per il training. Quindi, definisce una lista di diverse lunghezze di finestra che vogliamo testare.\n",
     "   \n",
-    "2. **Misurazione delle Traiettorie**: il codice scorre l'intero set di training, identificando ogni singola traiettoria unica e,     soprattutto, contando esattamente quanti punti (o misure) essa contiene. In pratica, misura la lunghezza di ogni sequenza di navigazione.\n",
+    "2. **Misurazione delle Traiettorie**: il codice scorre l'intero set di training, identificando ogni singola traiettoria unica e, soprattutto, contando esattamente quanti dati essa contiene.\n",
     "\n",
-    "3. **Report di Usabilità**: il codice combina le lunghezze misurate con i timestep che vogliamo testare. Il risultato è un report statistico:\n",
-    "   * Per ogni dimensione di finestra (ad esempio, 30 punti), il codice calcola quante traiettorie sono abbastanza lunghe (almeno 30 punti) e quindi utilizzabili per l'addestramento.\n",
-    "\n",
-    "   * Conseguentemente, calcola quante traiettorie sono troppo corte e devono essere scartate per quella specifica configurazione.\n",
-    " \n"
+    "3. **Report**: Per ogni dimensione di finestra, il codice calcola quante traiettorie sono abbastanza lunghe e quindi utilizzabili per l'addestramento e quante no.\n"
    ]
   },
   {
@@ -302,33 +298,32 @@
    "metadata": {},
    "source": [
     "#### Funzioni del Data Generator\n",
-    "Questo insieme di funzioni costituisce il motore di preparazione dei dati per l'addestramento della rete neurale LSTM, risolvendo il problema di addestrare un modello su milioni di punti di dati (traiettorie) con una memoria di sistema limitata.\n",
+    "Questo insieme di funzioni costituisce il motore di preparazione dei dati per l'addestramento della rete neurale LSTM, risolvendo il problema di addestrare un modello su milioni di punti di dati (traiettorie) con una RAM limitata.\n",
     "\n",
     "1. **Funzione di Calcolo Passi per Epoca** *(calculate_steps_per_epoch)*\n",
     "Quando si addestra una rete neurale, è necessario sapere esattamente quanti step (ovvero, quanti batch di dati) compongono un'epoca completa. Questa funzione svolge questo compito in modo sicuro e robusto:\n",
     "\n",
-    "   * **Conteggio Sicuro:** La funzione scansiona tutti i file di dati leggendo solo l'ID di ogni traiettoria e contandone la lunghezza, esattamente come nell'analisi precedente. Questo è un processo efficiente in termini di RAM perché non carica tutte le colonne in memoria.\n",
+    "   * **Conteggio Sicuro:**: La funzione scansiona tutti i file di dati leggendo solo l'ID di ogni traiettoria e contandone la lunghezza.\n",
     "\n",
-    "   * **Calcolo delle Finestre:** Per ogni traiettoria la cui lunghezza supera la WINDOW_SIZE (la lunghezza di input richiesta dall'LSTM), calcola il numero esatto di finestre temporali che possono essere estratte (una traiettoria lunga 100 punti può generare 100 - WINDOW_SIZE + 1 finestre).\n",
+    "   * **Calcolo delle Finestre:**: Per ogni traiettoria la cui lunghezza supera la **WINDOW_SIZE**, calcola il numero esatto di finestre temporali che possono essere estratte.  \n",
+    "   Es. Una traiettoria lunga 100 punti può generare `100 - WINDOW_SIZE + 1 finestre`.\n",
     "\n",
-    "   * **Determinazione degli Steps:** Infine, divide il numero totale di finestre (campioni) per la BATCH_SIZE (il numero di campioni elaborati per volta dalla GPU). Il risultato è il numero preciso di steps per epoca che la funzione di training di Keras dovrà eseguire.\n",
-    "\n",
-    "   Questa precisione è cruciale: se il numero di steps è errato, l'addestramento si blocca o non copre l'intero dataset, compromettendo l'apprendimento.\n",
+    "   * **Determinazione degli Steps:** Infine, divide il numero totale di finestre per la BATCH_SIZE (il numero di campioni elaborati per volta dalla GPU). Il risultato è il numero preciso di steps per epoca che la funzione di training dovrà eseguire.\n",
     "\n",
     "2. **Generatore di Dati Efficace** *(data_generator_v)*\n",
-    "Poiché il dataset delle traiettorie è troppo grande per stare nella RAM, non possiamo usare i metodi di caricamento standard. È necessario un Data Generator che agisca come una *fabbrica di dati just-in-time*\n",
+    "Poiché il dataset delle traiettorie è troppo grande per stare nella RAM, non possiamo usare i metodi di caricamento standard. È necessario un Data Generator che agisca come una **fabbrica di dati just-in-time**\n",
     "\n",
-    "   * **Lettura Chunkizzata e Sequenziale:** Il generatore legge i file di dati Parquet in piccoli blocchi (CHUNK_SIZE_ROWS) anziché tutto in una volta. Questo assicura che il carico di memoria rimanga basso. \n",
+    "   * **Lettura sequenziale di Chuck:** Il generatore legge i file di dati Parquet in piccoli blocchi `CHUNK_SIZE_ROWS`. Questo assicura che il carico di memoria rimanga basso. \n",
     "\n",
-    "   * **Gestione delle Traiettorie a Cavallo:** La sfida principale è che una singola traiettoria può estendersi su più blocchi di dati (chunk) o addirittura su più file. Il generatore utilizza dei buffer temporanei (chunk_buffer e file_buffer) per memorizzare i dati parziali di una traiettoria finché non è completa, garantendo che nessuna sequenza venga interrotta o persa.\n",
+    "   * **Gestione delle traiettorie:** La sfida principale è che una singola traiettoria può estendersi su più blocchi di dati (chunk) o addirittura su più file. Il generatore utilizza dei buffer temporanei (chunk_buffer e file_buffer) per memorizzare i dati parziali di una traiettoria finché non è completa, garantendo che nessuna sequenza venga interrotta o persa.\n",
     "\n",
-    "   * **Creazione delle Finestre:** Per ogni traiettoria completa, la funzione interna *create_windows* estrae tutte le finestre temporali di dimensione WINDOW_SIZE che possono essere generate.\n",
+    "   * **Creazione delle finestre:** Per ogni traiettoria completa, la funzione interna **`create_windows`** estrae tutte le finestre temporali di dimensione WINDOW_SIZE che possono essere generate.\n",
     "\n",
     "   * **Normalizzazione e Yield:**\n",
     "\n",
-    "     1. I dati estratti vengono immediatamente normalizzati usando lo scaler pre-calcolato (portandoli sulla scala media 0, deviazione standard 1).\n",
+    "     1. I dati estratti vengono immediatamente normalizzati usando lo scaler pre-calcolato `scaler.joblib`.\n",
     "\n",
-    "     2. Quando il generatore ha abbastanza finestre per riempire un BATCH_SIZE, le impacchetta e le fornisce alla rete neurale tramite l'istruzione yield.\n"
+    "     2. Quando il generatore ha abbastanza finestre per riempire un BATCH_SIZE, le impacchetta e le fornisce alla rete neurale tramite l'istruzione `yield`.\n"
    ]
   },
   {
@@ -552,10 +547,11 @@
    "metadata": {},
    "source": [
     "#### Definizione Modello LSMT Autoencoder\n",
-    "Questa parte del codice descrive la costruzione della rete neurale vera e propria che sarà utilizzata per apprendere e, successivamente, rilevare le anomalie nelle traiettorie delle navi. Il modello implementato è un Autoencoder Sequenziale basato su unità LSTM (Long Short-Term Memory).\n",
-    "L'obiettivo di un Autoencoder è imparare una rappresentazione compressa dei dati (il vettore latente) e poi ricostruire l'input originale dall'output.\n",
+    "Qui viene descritta la costruzione della rete neurale vera e propria che sarà utilizzata per apprendere e, successivamente, rilevare le anomalie nelle traiettorie delle navi.  \n",
+    "Il modello implementato è un Autoencoder Sequenziale basato su unità LSTM (Long Short-Term Memory).  \n",
+    "L'obiettivo di un Autoencoder è imparare una rappresentazione compressa dei dati **il vettore latente** e poi ricostruire l'input originale dall'output.\n",
     "\n",
-    "1. La Fase di Codifica **(Encoder)**\n",
+    "1. La Fase di Codifica - **(Encoder)**\n",
     "\n",
     "   * **Input:** La rete accetta come input una finestra temporale (WINDOW_SIZE) con le nostre caratteristiche (**n_features**: Latitudine, Longitudine, SOG, COG).\n",
     "\n",
@@ -727,25 +723,23 @@
    "source": [
     "#### Addestramento LSMT\n",
     "1. **Definizione dei Parametri di Training Ottimali**\n",
-    "Prima di iniziare, vengono stabiliti i parametri di dimensione dell'epoca basati su test preliminari eseguiti sulla GPU RTX 4050:\n",
+    "Prima di iniziare, vengono stabiliti i parametri di dimensione dell'epoca basati su test preliminari eseguiti sulla GPU **RTX 4050**:\n",
     "\n",
-    "   * **STEPS_PER_EPOCH_CALCOLATI (200.000):** Questo valore, ottenuto da analisi di benchmark sulla GPU (come la funzione calculate_steps_per_epoch discussa precedentemente), definisce la quantità di dati che il modello deve vedere per completare un'epoca. Questo numero è stato specificamente calibrato per far sì che ogni epoca duri circa 30 minuti, ottimizzando l'uso delle risorse GPU.\n",
+    "   * **STEPS_PER_EPOCH_CALCOLATI (200.000):** Questo valore, ottenuto da analisi di benchmark sulla GPU, definisce la quantità di dati che il modello deve vedere per completare un'epoca. Questo numero è stato specificamente calibrato per far sì che ogni epoca duri circa 30 minuti.\n",
     "\n",
     "   * **VALIDATION_STEPS_CALCOLATI (40.000):** Definisce quanti batch di dati di validazione verranno utilizzati al termine di ogni epoca per valutare le prestazioni su dati non visti.\n",
     "\n",
     "2. **Impostazione dei Callback per un Addestramento Robusto**\n",
     "\n",
-    "   * **ModelCheckpoint (Salvataggio del Modello Migliore):** Monitora la val_loss (errore di ricostruzione sul set di validazione). Il suo compito è salvare il modello solo quando si verifica un miglioramento della performance. Questo garantisce che, anche se l'addestramento continua, si mantenga sempre la versione migliore del modello in lstm_autoencoder_best.keras.\n",
+    "   * **ModelCheckpoint:** Monitora la **val_loss** (errore di ricostruzione sul set di validazione). Il suo compito è salvare il modello solo quando si verifica un miglioramento della performance. Questo garantisce che, anche se l'addestramento continua, si mantenga sempre la versione migliore del modello in `lstm_autoencoder_best.keras`.\n",
     "\n",
-    "   * **EarlyStopping (Interruzione Anticipata):** Agisce come un meccanismo di sicurezza. Monitora anch'esso la val_loss e, se non rileva alcun miglioramento per un certo numero di epoche (patience=5), interrompe l'addestramento in anticipo. Questo è cruciale per prevenire l'overfitting (quando il modello impara troppo a memoria i dati di training) e per risparmiare tempo e risorse di calcolo.\n",
+    "   * **EarlyStopping:** Monitora anch'esso la val_loss e, se non rileva alcun miglioramento per un certo numero di epoche `patience=5`, interrompe l'addestramento in anticipo. Questo è cruciale per prevenire l'overfitting e per risparmiare tempo e risorse di calcolo.\n",
     "\n",
-    "   * **CSVLogger:** Registra i dettagli dell'addestramento (come la loss e la validation loss di ogni epoca) in un file training_log.csv. Questo permette di analizzare le prestazioni e tracciare le curve di apprendimento anche dopo la fine del processo.\n",
+    "   * **CSVLogger:** Registra i dettagli dell'addestramento in un file training_log.csv.\n",
     "\n",
-    "3. **Avvio del Processo di Addestramento (model_lstm.fit)**\n",
-    "   * **Dati:** Riceve i generatori di dati (train_gen e val_gen), che forniscono continuamente batch di dati normalizzati direttamente dalla memoria di massa, evitando problemi di RAM.\n",
-    "\n",
+    "3. **Avvio del Processo di Addestramento** - `(model_lstm.fit)`\n",
+    "   * **Dati:** Riceve i generatori di dati `train_gen e val_gen`, che forniscono continuamente batch di dati normalizzati direttamente dalla memoria, evitando problemi di RAM.\n",
     "   * **Epoche:** Sebbene siano impostate 50 epoche, l'addestramento si affiderà all'EarlyStopping per fermarsi non appena la performance sul set di validazione smette di migliorare.\n",
-    "\n",
     "   * **Controllo:** Tutti i callbacks definiti sono attivati per supervisionare e gestire il processo."
    ]
   },
