--- a/Progetto/LSMT/Test.ipynb
+++ b/Progetto/LSMT/Test.ipynb
@@ -94,34 +94,24 @@
    "metadata": {},
    "source": [
     "#### Analisi Post-Addestramento: Tracciamento delle Curve di Apprendimento\n",
-    "Questa sezione del codice è dedicata alla valutazione diagnostica del processo di training del modello. L'obiettivo è caricare i dati registrati durante l'addestramento e generare un grafico per capire se il modello ha appreso in modo efficace, stabile e senza incorrere in overfitting.\n",
+    "Questa sezione del codice è dedicata alla valutazione diagnostica del processo di training del modello. L'obiettivo è caricare i dati registrati durante l'addestramento e generare un grafico per capire se il modello ha appreso in modo efficace, stabile e senza incorrere in overfitting.  \n",
     "\n",
-    "1. **Caricamento dei Dati di Log:** Il codice tenta innanzitutto di leggere il file training_log.csv. Questo file è stato creato dal callback CSVLogger durante la fase di *model.fit()*. Questo file contiene una registrazione riga per riga di metriche chiave per ogni epoca di training, in particolare i valori di loss (errore sul set di training) e val_loss (errore sul set di validazione).\n",
-    "\n",
-    "\n",
-    "2. **Generazione del Grafico Diagnostico:** Se il caricamento ha successo, il codice utilizza la libreria Matplotlib per visualizzare le \"Curve di Apprendimento\" :\n",
-    "\n",
-    "   * **Asse Orizzontale (X):** Rappresenta le Epoche, ovvero il numero di volte in cui l'intero set di dati di training è stato mostrato al modello.\n",
-    "\n",
-    "   * **Asse Verticale (Y):** Rappresenta la Loss (MAE), che è l'errore medio di ricostruzione del modello. Minore è il valore, migliore è la performance.\n",
-    "\n",
+    "**Generazione del Grafico Diagnostico:** Viene recuperato il file che descrive l'andamento di ogni epoca dell'addesstramento e ne ricava un grafico rappresentativo degli andamenti della **Training loss** e **Validation loss**.  \n",
+    " Il codice utilizza la libreria Matplotlib per visualizzare le \"Curve di Apprendimento\" :\n",
+    "   * **Asse Orizzontale (X):** Rappresenta le Epoche.  \n",
+    "   * **Asse Verticale (Y):** Rappresenta la Loss (MAE), che è l'errore medio di ricostruzione del modello.  \n",
+    "   \n",
     "   Vengono tracciate due linee fondamentali sul grafico:\n",
+    "     1. **Training Loss (Linea Blu):** \n",
+    "     2. **Validation Loss (Linea Arancione):**\n",
     "\n",
-    "     1. **Training Loss (Linea Blu):** Mostra come l'errore di ricostruzione diminuisce sui dati di training. Questa linea scende sempre o quasi sempre, indicando che il modello sta imparando a ricostruire i dati che ha già visto.\n",
-    "\n",
-    "     2. **Validation Loss (Linea Arancione):** Mostra come l'errore di ricostruzione si comporta sui dati di validazione (dati non visti).\n",
-    "\n",
-    "3. **Interpretazione Diagnostica:** Analizzando il grafico delle curve di apprendimento, possiamo trarre conclusioni dirette sull'efficacia del processo di training del nostro LSTM Autoencoder:\n",
+    "**Interpretazione Diagnostica:** Analizzando il grafico delle curve di apprendimento, possiamo trarre conclusioni dirette sull'efficacia del processo di training del nostro LSTM Autoencoder:\n",
     "\n",
     "   * **Fase di Apprendimento Stabile (Epoche 0-12):** Nelle prime dodici epoche, la Training Loss (blu) e la Validation Loss (arancione) sono molto vicine tra loro, oscillando tra 0.02 e 0.08. Questa vicinanza indica che **il modello sta generalizzando bene:** l'errore sui dati non visti (Validation Loss) è quasi identico all'errore sui dati visti (Training Loss). **Il modello non sta memorizzando eccessivamente i dati di training.** \n",
-    "   **Il punto di migliore performance per entrambi gli errori sembra essere raggiunto intorno all'Epoca 10 o 11**, dove la val_loss raggiunge il suo minimo (circa 0.03). Questo è il punto in cui il modello ha la massima capacità di ricostruire le traiettorie normali.\n",
+    "   **Il punto di migliore performance per entrambi gli errori è stato raggiunto all'Epoca 12**, dove la val_loss raggiunge il suo minimo (circa 0.03). Questo è il punto in cui il modello ha la massima capacità di ricostruire le traiettorie normali.\n",
     "\n",
-    "   * **Rilevamento di Anomalie/Interruzione (Epoche 13-16):**\n",
-    "     A partire dall'Epoca 13, si verifica un incremento improvviso e drastico sia della Training Loss che della Validation Loss. L'errore passa da circa 0.03 a quasi 0.7.\n",
-    "       * **Causa Probabile:** Un aumento così netto e sincronizzato su entrambi i set di dati suggerisce che è stato incontrato un sotto-set di dati molto diverso e/o estremamente anomalo durante l'addestramento, che il modello non è riuscito a ricostruire, o che il processo di apprendimento è diventato instabile (ad esempio, un gradiente troppo grande).\n",
-    "\n",
-    "       * **Ruolo dell'EarlyStopping:** Il modello migliore dovrebbe essere stato salvato intorno all'Epoca 10 o 11 dal ModelCheckpoint.L'EarlyStopping dovrebbe essere intervenuto poco dopo l'Epoca 12 (dopo 5 epoche di non-miglioramento rispetto al minimo).\n",
-    "\n"
+    "   * **Rilevamento di Anomalie/Interruzione (Epoche 13-17):**\n",
+    "     A partire dall'Epoca 13, si verifica un incremento improvviso e drastico sia della Training Loss che della Validation Loss. L'errore passa da circa 0.03 a quasi 0.7. Qui entra in gioco l'**EarlyStopping** che ferma l'addestramento perchè non ci sono stati miglioramenti nelle ultime 5 epoche."
    ]
   },
   {
@@ -524,15 +514,11 @@
     "\n",
     "3. **Generazione del Grafico di Confronto:**\n",
     "   * Viene creata una figura complessa che mostra il confronto tra la traiettoria Reale (GPS) e la traiettoria Ricostruita dall'AI.\n",
-    "\n",
-    "   * Analisi dell'Output Grafico: Il grafico del Best Sample 24 è un esempio eccellente di ricostruzione riuscita (il punteggio $\\text{MAE} = 0.0565$ è molto vicino al $\\text{MAE}$ di test generale di $0.03159$). Abbiamo 3 grafici: \n",
     "     \n",
-    "    1. **Ricostruzione Rotta 2D:**\n",
-    "       * La linea Reale e la Ricostruita sono quasi perfettamente sovrapposte lungo tutto il percorso. Questo dimostra che l'Autoencoder ha compreso la relazione tra Latitudine e Longitudine e ha imparato a ricostruire l'andamento spaziale della traiettoria con altissima precisione.\n",
-    "    2. **Dinamica Velocità:**\n",
-    "       * Il modello Ricostruito (AI) segue l'andamento della Reale con una buona fedeltà, anche se l'AI tende a produrre una curva più smussata e meno \"a gradino\" rispetto al dato grezzo reale. Questo è tipico degli Autoencoder che filtrano il rumore. L'errore di ricostruzione tra i due segnali è minimo.\n",
-    "    3. **Dinamica Direzione:**\n",
-    "       * Similmente alla velocità, la Ricostruita (AI) segue la tendenza della Reale. Si notano delle discrepanze più marcate (ad esempio, tra il timestep 15 e 20), ma nel complesso, l'AI riproduce con successo il range e la variazione della rotta della nave.\n",
+    "    1. **Dinamica Velocità:**\n",
+    "       * Il modello Ricostruito segue l'andamento della Reale con una buona fedeltà, anche se l'AI tende a produrre una curva più smussata e meno \"a gradino\" rispetto al dato grezzo reale. Questo è tipico degli Autoencoder che filtrano il rumore. L'errore di ricostruzione tra i due segnali è minimo.\n",
+    "    2. **Dinamica Direzione:**\n",
+    "       * Similmente alla velocità, la Ricostruita segue la tendenza della Reale. Si notano delle discrepanze più marcate, ma nel complesso, l'AI riproduce con successo il range e la variazione della rotta della nave.\n",
     "\n",
     "4. **Conclusione Qualitativa**.  \n",
     "  L'ispezione visiva di questo campione di successo convalida l'efficacia del training. L'Autoencoder ha imparato a ricostruire la dinamica delle traiettorie normali con un livello di errore molto basso.\n",
@@ -619,18 +605,18 @@
     "1. **Calcolo Campionario dell'Errore (Simulazione)**\n",
     "   * **Campionamento Esteso:** Invece di eseguire un unico model.evaluate() (che dà solo la media), il codice elabora 1000 batch di dati di test. Poiché ogni batch contiene 64 finestre temporali, questo campiona circa 64.000 finestre in totale.\n",
     "   * **Calcolo dell'Errore per Sequenza:** Per ogni singola finestra temporale *(X_batch)*, viene calcolato l'errore assoluto medio ($\\text{MAE}$) tra l'input reale e la sua ricostruzione da parte del modello. Questo è l'errore che l'Autoencoder ha commesso per quella specifica traiettoria.\n",
-    "   * **Raccolta Dati:** Tutti i 64.000 errori individuali vengono raccolti nella lista *errori_normali.*\n",
+    "   * **Raccolta Dati:** Tutti i 64.000 errori individuali vengono raccolti nella lista `errori_normali`.\n",
     "\n",
     "2. **Generazione dell'Istogramma di Distribuzione**\n",
-    "Il codice utilizza la libreria Seaborn per visualizzare questa grande raccolta di errori sotto forma di istogramma e densità (la curva verde continua):\n",
+    "Il codice utilizza la libreria **Seaborn** per visualizzare questa grande raccolta di errori sotto forma di istogramma e densità (la curva verde continua):\n",
     "   * **Istogramma:** Mostra il conteggio (asse Y) di quante traiettorie hanno generato un determinato livello di errore (asse X).\n",
     "   * **Linea della Media:** Viene tracciata una linea tratteggiata rossa che indica il valore medio di tutti gli errori raccolti.\n",
     "\n",
     "3. **Analisi dell'Output Grafico (Baseline)**\n",
     "Il grafico **\"Distribuzione dell'Errore su Dati Normali (Baseline)\"** rivela la firma statistica della normalità:\n",
-    "   * **Forma della Distribuzione:** La curva è fortemente asimmetrica e concentrata a sinistra, con un picco molto alto (che supera i 35.000 conteggi) vicino allo zero. Questa forma è ideale, perché indica che la stragrande maggioranza delle traiettorie normali viene ricostruita con un errore estremamente basso.\n",
+    "   * **Forma della Distribuzione:** La curva è fortemente asimmetrica e concentrata a sinistra, con un picco molto alto vicino allo zero. Questa forma è ideale, perché indica che la stragrande maggioranza delle traiettorie normali viene ricostruita con un errore estremamente basso.\n",
     "   * **Media e Baseline:** La linea rossa tratteggiata identifica la media degli errori di ricostruzione, che è stata calcolata come:$$\\text{Media degli Errori Normali: } 0.0171$$\n",
-    "   * **Rilevamento Anomalie:** Il punto cruciale di questa analisi è la definizione della soglia. Dato che la quasi totalità degli errori normali si concentra sotto un certo valore (ad esempio, intorno a 0.05), possiamo scegliere una soglia (ad esempio, 3 o 4 volte la deviazione standard sopra la media, o un percentile specifico) per definire l'anomalia."
+    "   * **Rilevamento Anomalie:** Il punto cruciale di questa analisi è la definizione della soglia. Dato che la quasi totalità degli errori normali si concentra sotto un certo valore, possiamo scegliere una soglia per definire l'anomalia."
    ]
   },
   {
@@ -696,7 +682,7 @@
     "\n",
     "2. **Stabilità della Ricostruzione nel Tempo (MAE per Step)** \n",
     "Il secondo grafico analizza se la precisione del modello varia in base alla posizione del punto dati all'interno della finestra temporale di 30 step.\n",
-    "   * **Processo:** Viene calcolato l'Errore Medio Assoluto ($\\text{MAE}$) per ogni step temporale (da 1 a 30) su tutti i campioni del batch. Questo produce quattro curve (una per Latitudine, Longitudine, Velocità e Rotta).\n",
+    "   * **Processo:** Viene calcolato l'Errore Medio Assoluto ($\\text{MAE}$) per ogni step temporale (da 1 a 30) su tutti i campioni del batch. Questo produce quattro curve.\n",
     "   * **Analisi delle Posizioni (Latitudine e Longitudine):** Le linee blu e arancione (posizione) mostrano un $\\text{MAE}$ estremamente basso (tra $0.001$ e $0.005$) e molto stabile. Questo indica che la ricostruzione della posizione assoluta è eccezionalmente precisa lungo l'intera sequenza.\n",
     "   * **Analisi delle Dinamiche (Velocità e Rotta):** Le linee verde ($\\text{SOG}$) e rossa ($\\text{COG}$) hanno un $\\text{MAE}$ maggiore, ma ciò è atteso, in quanto le variabili dinamiche sono intrinsecamente più rumorose e difficili da prevedere. L'errore medio si mantiene generalmente sotto lo $0.03$. Si notano delle variazioni nell'errore (picchi per la rotta intorno allo step 1 e allo step 24). Questo suggerisce che il modello ha leggermente più difficoltà a ricostruire la Rotta all'inizio e verso la fine della finestra, ma la stabilità è elevata nella maggior parte della sequenza."
    ]
@@ -801,11 +787,11 @@
     "Questa sezione serve a verificare il successo del processo di codifica. L'Autoencoder è efficace se l'Encoder riesce a mappare traiettorie simili tra loro in punti vicini nello spazio latente, mentre traiettorie diverse finiscono in punti distanti.\n",
     "\n",
     "1. **Estrazione dei Vettori Latenti**\n",
-    "   * **Creazione del Modello Encoder:** Viene creato un nuovo modello Keras (encoder_model) che prende gli stessi input della rete completa, ma **la cui uscita è impostata sullo strato LSTM Encoder** (il secondo strato della rete). Questo ci permette di ispezionare direttamente il vettore latente a 32 dimensioni **(l'informazione compressa)**.\n",
-    "   * **Campionamento:** Vengono accumulate e processate centinaia di finestre temporali dal *test_gen* per ottenere un ampio campione di vettori latenti *(latent_vectors)*.\n",
+    "   * **Creazione del Modello Encoder:** Viene creato un nuovo modello `encoder_model` che prende gli stessi input della rete completa, ma **la cui uscita è impostata sullo strato LSTM Encoder** (il secondo strato della rete). Questo ci permette di ispezionare direttamente il vettore latente a 32 dimensioni **(l'informazione compressa)**.\n",
+    "   * **Campionamento:** Vengono accumulate e processate centinaia di finestre temporali dal `test_gen` per ottenere un ampio campione di vettori latenti `latent_vectors`.\n",
     "\n",
     "2. **Calcolo delle Caratteristiche Fisiche Rilevanti**. \n",
-    "I dati di input vengono riportati alla loro scala fisica (Nodi e Gradi) tramite l'inverse_transform. Vengono calcolate due metriche per ogni traiettoria:\n",
+    "I dati di input vengono riportati alla loro scala fisica (Nodi e Gradi) tramite l'`inverse_transform`. Vengono calcolate due metriche per ogni traiettoria:\n",
     "   * **Velocità Media:** La media della Velocità su Terra ($\\text{SOG}$) lungo i 30 timestep.\n",
     "   * **Intensità di Virata:** La deviazione standard della Rotta su Terra ($\\text{COG}$) lungo i 30 timestep. Una deviazione standard alta indica una manovra complessa; una bassa indica una rotta dritta.\n",
     "\n",
@@ -888,13 +874,13 @@
     "\n",
     "1. **Preparazione dell'Input Disturbato**\n",
     "\n",
-    "   * **Estrazione Baseline:** Viene selezionata una sequenza di traiettoria normale e pulita *(clean_traj)* dal set di test.\n",
+    "   * **Estrazione Baseline:** Viene selezionata una sequenza di traiettoria normale e pulita `clean_traj` dal set di test.\n",
     "   \n",
     "   * **Iniezione di Rumore:** Viene generato del rumore gaussiano artificiale (noise) e aggiunto alla traiettoria pulita. Questo simula un scenario in cui i segnali GPS sono disturbati da interferenze casuali che distorcono la posizione effettiva della nave, disperdendo i punti dati su una vasta area.\n",
     "\n",
-    "   * **Input al Modello:** La traiettoria rumorosa *(noisy_traj)* viene quindi data in pasto al modello per la ricostruzione.\n",
+    "   * **Input al Modello:** La traiettoria rumorosa `noisy_traj` viene quindi data in pasto al modello per la ricostruzione.\n",
     "\n",
-    "2. **Ricostruzione e Denormalizzazione:** Il modello esegue la predizione sulla sequenza disturbata e l'output *(pred_from_noisy)* viene denormalizzato insieme alla traiettoria pulita originale e all'input disturbato per la visualizzazione.\n",
+    "2. **Ricostruzione e Denormalizzazione:** Il modello esegue la predizione sulla sequenza disturbata e l'output `pred_from_noisy` viene denormalizzato insieme alla traiettoria pulita originale e all'input disturbato per la visualizzazione.\n",
     "\n",
     "3. **Analisi dell'Output Grafico** \n",
     "Il grafico confronta i tre stati della traiettoria:\n",
