--- a/Progetto/LSMT/LSMT.ipynb
+++ b/Progetto/LSMT/LSMT.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c20ffe8d",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
     "    Scansiona tutti i file in modo efficiente (RAM-safe) per calcolare\n",
     "    il numero totale di finestre (campioni) che verranno generate,\n",
     "    e da lì calcola il numero di \"steps\" (batch) per epoca.\n",
-    "    Usa il metodo Counter.update(Series) che sappiamo funzionare.\n",
+    "    Usa il metodo Counter.update(Series)\n",
     "    \"\"\"\n",
     "    print(f\"--- Calcolo Steps per {len(file_paths)} file ---\")\n",
     "    \n",
